--- a/assets/bootstrap/css/bootstrap-utilities.rtl.css
+++ b/assets/bootstrap/css/bootstrap-utilities.rtl.css
@@ -238,7 +238,7 @@
   vertical-align: text-top !important;
 }
 
-.float-swptboot {
+.float-stboot {
   float: right !important;
 }
 
@@ -387,15 +387,15 @@
   bottom: 100% !important;
 }
 
-.swptboot-0 {
+.stboot-0 {
   right: 0 !important;
 }
 
-.swptboot-50 {
+.stboot-50 {
   right: 50% !important;
 }
 
-.swptboot-100 {
+.stboot-100 {
   right: 100% !important;
 }
 
@@ -455,11 +455,11 @@
   border-bottom: 0 !important;
 }
 
-.border-swptboot {
+.border-stboot {
   border-right: 1px solid #dee2e6 !important;
 }
 
-.border-swptboot-0 {
+.border-stboot-0 {
   border-right: 0 !important;
 }
 
@@ -655,8 +655,8 @@
   gap: 3rem !important;
 }
 
-.justify-content-swptboot {
-  justify-content: flex-swptboot !important;
+.justify-content-stboot {
+  justify-content: flex-stboot !important;
 }
 
 .justify-content-end {
@@ -679,8 +679,8 @@
   justify-content: space-evenly !important;
 }
 
-.align-items-swptboot {
-  align-items: flex-swptboot !important;
+.align-items-stboot {
+  align-items: flex-stboot !important;
 }
 
 .align-items-end {
@@ -699,8 +699,8 @@
   align-items: stretch !important;
 }
 
-.align-content-swptboot {
-  align-content: flex-swptboot !important;
+.align-content-stboot {
+  align-content: flex-stboot !important;
 }
 
 .align-content-end {
@@ -727,8 +727,8 @@
   align-self: auto !important;
 }
 
-.align-self-swptboot {
-  align-self: flex-swptboot !important;
+.align-self-stboot {
+  align-self: flex-stboot !important;
 }
 
 .align-self-end {
@@ -1241,7 +1241,7 @@
   line-height: 2 !important;
 }
 
-.text-swptboot {
+.text-stboot {
   text-align: right !important;
 }
 
@@ -1528,7 +1528,7 @@
   border-bottom-right-radius: 0.25rem !important;
 }
 
-.rounded-swptboot {
+.rounded-stboot {
   border-bottom-right-radius: 0.25rem !important;
   border-top-right-radius: 0.25rem !important;
 }
@@ -1542,7 +1542,7 @@
 }
 
 @media (min-width: 576px) {
-  .float-sm-swptboot {
+  .float-sm-stboot {
     float: right !important;
   }
 
@@ -1666,8 +1666,8 @@
     gap: 3rem !important;
   }
 
-  .justify-content-sm-swptboot {
-    justify-content: flex-swptboot !important;
+  .justify-content-sm-stboot {
+    justify-content: flex-stboot !important;
   }
 
   .justify-content-sm-end {
@@ -1690,8 +1690,8 @@
     justify-content: space-evenly !important;
   }
 
-  .align-items-sm-swptboot {
-    align-items: flex-swptboot !important;
+  .align-items-sm-stboot {
+    align-items: flex-stboot !important;
   }
 
   .align-items-sm-end {
@@ -1710,8 +1710,8 @@
     align-items: stretch !important;
   }
 
-  .align-content-sm-swptboot {
-    align-content: flex-swptboot !important;
+  .align-content-sm-stboot {
+    align-content: flex-stboot !important;
   }
 
   .align-content-sm-end {
@@ -1738,8 +1738,8 @@
     align-self: auto !important;
   }
 
-  .align-self-sm-swptboot {
-    align-self: flex-swptboot !important;
+  .align-self-sm-stboot {
+    align-self: flex-stboot !important;
   }
 
   .align-self-sm-end {
@@ -2180,7 +2180,7 @@
     padding-right: 3rem !important;
   }
 
-  .text-sm-swptboot {
+  .text-sm-stboot {
     text-align: right !important;
   }
 
@@ -2193,7 +2193,7 @@
   }
 }
 @media (min-width: 768px) {
-  .float-md-swptboot {
+  .float-md-stboot {
     float: right !important;
   }
 
@@ -2317,8 +2317,8 @@
     gap: 3rem !important;
   }
 
-  .justify-content-md-swptboot {
-    justify-content: flex-swptboot !important;
+  .justify-content-md-stboot {
+    justify-content: flex-stboot !important;
   }
 
   .justify-content-md-end {
@@ -2341,8 +2341,8 @@
     justify-content: space-evenly !important;
   }
 
-  .align-items-md-swptboot {
-    align-items: flex-swptboot !important;
+  .align-items-md-stboot {
+    align-items: flex-stboot !important;
   }
 
   .align-items-md-end {
@@ -2361,8 +2361,8 @@
     align-items: stretch !important;
   }
 
-  .align-content-md-swptboot {
-    align-content: flex-swptboot !important;
+  .align-content-md-stboot {
+    align-content: flex-stboot !important;
   }
 
   .align-content-md-end {
@@ -2389,8 +2389,8 @@
     align-self: auto !important;
   }
 
-  .align-self-md-swptboot {
-    align-self: flex-swptboot !important;
+  .align-self-md-stboot {
+    align-self: flex-stboot !important;
   }
 
   .align-self-md-end {
@@ -2831,7 +2831,7 @@
     padding-right: 3rem !important;
   }
 
-  .text-md-swptboot {
+  .text-md-stboot {
     text-align: right !important;
   }
 
@@ -2844,7 +2844,7 @@
   }
 }
 @media (min-width: 992px) {
-  .float-lg-swptboot {
+  .float-lg-stboot {
     float: right !important;
   }
 
@@ -2968,8 +2968,8 @@
     gap: 3rem !important;
   }
 
-  .justify-content-lg-swptboot {
-    justify-content: flex-swptboot !important;
+  .justify-content-lg-stboot {
+    justify-content: flex-stboot !important;
   }
 
   .justify-content-lg-end {
@@ -2992,8 +2992,8 @@
     justify-content: space-evenly !important;
   }
 
-  .align-items-lg-swptboot {
-    align-items: flex-swptboot !important;
+  .align-items-lg-stboot {
+    align-items: flex-stboot !important;
   }
 
   .align-items-lg-end {
@@ -3012,8 +3012,8 @@
     align-items: stretch !important;
   }
 
-  .align-content-lg-swptboot {
-    align-content: flex-swptboot !important;
+  .align-content-lg-stboot {
+    align-content: flex-stboot !important;
   }
 
   .align-content-lg-end {
@@ -3040,8 +3040,8 @@
     align-self: auto !important;
   }
 
-  .align-self-lg-swptboot {
-    align-self: flex-swptboot !important;
+  .align-self-lg-stboot {
+    align-self: flex-stboot !important;
   }
 
   .align-self-lg-end {
@@ -3482,7 +3482,7 @@
     padding-right: 3rem !important;
   }
 
-  .text-lg-swptboot {
+  .text-lg-stboot {
     text-align: right !important;
   }
 
@@ -3495,7 +3495,7 @@
   }
 }
 @media (min-width: 1200px) {
-  .float-xl-swptboot {
+  .float-xl-stboot {
     float: right !important;
   }
 
@@ -3619,8 +3619,8 @@
     gap: 3rem !important;
   }
 
-  .justify-content-xl-swptboot {
-    justify-content: flex-swptboot !important;
+  .justify-content-xl-stboot {
+    justify-content: flex-stboot !important;
   }
 
   .justify-content-xl-end {
@@ -3643,8 +3643,8 @@
     justify-content: space-evenly !important;
   }
 
-  .align-items-xl-swptboot {
-    align-items: flex-swptboot !important;
+  .align-items-xl-stboot {
+    align-items: flex-stboot !important;
   }
 
   .align-items-xl-end {
@@ -3663,8 +3663,8 @@
     align-items: stretch !important;
   }
 
-  .align-content-xl-swptboot {
-    align-content: flex-swptboot !important;
+  .align-content-xl-stboot {
+    align-content: flex-stboot !important;
   }
 
   .align-content-xl-end {
@@ -3691,8 +3691,8 @@
     align-self: auto !important;
   }
 
-  .align-self-xl-swptboot {
-    align-self: flex-swptboot !important;
+  .align-self-xl-stboot {
+    align-self: flex-stboot !important;
   }
 
   .align-self-xl-end {
@@ -4133,7 +4133,7 @@
     padding-right: 3rem !important;
   }
 
-  .text-xl-swptboot {
+  .text-xl-stboot {
     text-align: right !important;
   }
 
@@ -4146,7 +4146,7 @@
   }
 }
 @media (min-width: 1400px) {
-  .float-xxl-swptboot {
+  .float-xxl-stboot {
     float: right !important;
   }
 
@@ -4270,8 +4270,8 @@
     gap: 3rem !important;
   }
 
-  .justify-content-xxl-swptboot {
-    justify-content: flex-swptboot !important;
+  .justify-content-xxl-stboot {
+    justify-content: flex-stboot !important;
   }
 
   .justify-content-xxl-end {
@@ -4294,8 +4294,8 @@
     justify-content: space-evenly !important;
   }
 
-  .align-items-xxl-swptboot {
-    align-items: flex-swptboot !important;
+  .align-items-xxl-stboot {
+    align-items: flex-stboot !important;
   }
 
   .align-items-xxl-end {
@@ -4314,8 +4314,8 @@
     align-items: stretch !important;
   }
 
-  .align-content-xxl-swptboot {
-    align-content: flex-swptboot !important;
+  .align-content-xxl-stboot {
+    align-content: flex-stboot !important;
   }
 
   .align-content-xxl-end {
@@ -4342,8 +4342,8 @@
     align-self: auto !important;
   }
 
-  .align-self-xxl-swptboot {
-    align-self: flex-swptboot !important;
+  .align-self-xxl-stboot {
+    align-self: flex-stboot !important;
   }
 
   .align-self-xxl-end {
@@ -4784,7 +4784,7 @@
     padding-right: 3rem !important;
   }
 
-  .text-xxl-swptboot {
+  .text-xxl-stboot {
     text-align: right !important;
   }
 
