--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: WPTBOOT Theme
+Theme Name: TBOOT Theme
 Author: Alexis Boyda
 Author URI: https://aleapp.com
-Description: WPTBOOT Bootstrap Theme
+Description: TBOOT Bootstrap Theme
 Version: 1.0
-Text Domain: wptboot
+Text Domain: tboot
 */
