--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,123 +1,61 @@
 
-/* @font-face {
-    font-family: 'Open Sans Bold';
-    src: url('open-sans/bold/OpenSans-Bold-webfont.eot');
-    src: url('open-sans/bold/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/bold/OpenSans-Bold-webfont.woff2') format('woff2'),
-         url('open-sans/bold/OpenSans-Bold-webfont.woff') format('woff'),
-         url('open-sans/bold/OpenSans-Bold-webfont.ttf') format('truetype'),
-         url('open-sans/bold/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 @font-face {
-    font-family: 'Open Sans Bold Italic';
-    src: url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.eot');
-    src: url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.woff2') format('woff2'),
-         url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.woff') format('woff'),
-         url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.ttf') format('truetype'),
-         url('open-sans/bolditalic/OpenSans-BoldItalic-webfont.svg#open_sansbold_italic') format('svg');
+    font-family: 'Open Sans Bold';
+    /* src: url('open-sans/bold/OpenSans-Bold-webfont.eot'); */
+    src: 
+        /* url('open-sans/bold/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('open-sans/bold/OpenSans-Bold-webfont.woff2') format('woff2'),
+        url('open-sans/bold/OpenSans-Bold-webfont.svg#open_sansbold') format('svg'), */
+        url('open-sans/bold/OpenSans-Bold-webfont.woff') format('woff'),
+        url('open-sans/bold/OpenSans-Bold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Open Sans Extrabold';
-    src: url('open-sans/extrabold/OpenSans-ExtraBold-webfont.eot');
-    src: url('open-sans/extrabold/OpenSans-ExtraBold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/extrabold/OpenSans-ExtraBold-webfont.woff2') format('woff2'),
-         url('open-sans/extrabold/OpenSans-ExtraBold-webfont.woff') format('woff'),
-         url('open-sans/extrabold/OpenSans-ExtraBold-webfont.ttf') format('truetype'),
-         url('open-sans/extrabold/OpenSans-ExtraBold-webfont.svg#open_sansextrabold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Open Sans Extrabold Italic';
-    src: url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.eot');
-    src: url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.woff2') format('woff2'),
-         url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.woff') format('woff'),
-         url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.ttf') format('truetype'),
-         url('open-sans/extrabolditalic/OpenSans-ExtraBoldItalic-webfont.svg#open_sansextrabold_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Open Sans Italic';
-    src: url('open-sans/italic/OpenSans-Italic-webfont.eot');
-    src: url('open-sans/italic/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/italic/OpenSans-Italic-webfont.woff2') format('woff2'),
-         url('open-sans/italic/OpenSans-Italic-webfont.woff') format('woff'),
-         url('open-sans/italic/OpenSans-Italic-webfont.ttf') format('truetype'),
-         url('open-sans/italic/OpenSans-Italic-webfont.svg#open_sansitalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Open Sans Light';
-    src: url('open-sans/light/OpenSans-Light-webfont.eot');
-    src: url('open-sans/light/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/light/OpenSans-Light-webfont.woff2') format('woff2'),
-         url('open-sans/light/OpenSans-Light-webfont.woff') format('woff'),
-         url('open-sans/light/OpenSans-Light-webfont.ttf') format('truetype'),
-         url('open-sans/light/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Open Sans Light Italic';
-    src: url('open-sans/lightitalic/OpenSans-LightItalic-webfont.eot');
-    src: url('open-sans/lightitalic/OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/lightitalic/OpenSans-LightItalic-webfont.woff2') format('woff2'),
-         url('open-sans/lightitalic/OpenSans-LightItalic-webfont.woff') format('woff'),
-         url('open-sans/lightitalic/OpenSans-LightItalic-webfont.ttf') format('truetype'),
-         url('open-sans/lightitalic/OpenSans-LightItalic-webfont.svg#open_sanslight_italic') format('svg');
+    /* src: url('open-sans/extrabold/OpenSans-ExtraBold-webfont.eot'); */
+    src: 
+        /* url('open-sans/extrabold/OpenSans-ExtraBold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('open-sans/extrabold/OpenSans-ExtraBold-webfont.woff2') format('woff2'),
+        url('open-sans/extrabold/OpenSans-ExtraBold-webfont.svg#open_sansextrabold') format('svg'), */
+        url('open-sans/extrabold/OpenSans-ExtraBold-webfont.woff') format('woff'),
+        url('open-sans/extrabold/OpenSans-ExtraBold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Open Sans Semibold';
-    src: url('open-sans/semibold/OpenSans-Semibold-webfont.eot');
-    src: url('open-sans/semibold/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/semibold/OpenSans-Semibold-webfont.woff2') format('woff2'),
-         url('open-sans/semibold/OpenSans-Semibold-webfont.woff') format('woff'),
-         url('open-sans/semibold/OpenSans-Semibold-webfont.ttf') format('truetype'),
-         url('open-sans/semibold/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
+    /* src: url('open-sans/semibold/OpenSans-Semibold-webfont.eot'); */
+    src: 
+        /* url('open-sans/semibold/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('open-sans/semibold/OpenSans-Semibold-webfont.woff2') format('woff2'),
+        url('open-sans/semibold/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg'), */
+        url('open-sans/semibold/OpenSans-Semibold-webfont.woff') format('woff'),
+        url('open-sans/semibold/OpenSans-Semibold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
-@font-face {
-    font-family: 'Open Sans Semibold Italic';
-    src: url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.eot');
-    src: url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.woff2') format('woff2'),
-         url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.woff') format('woff'),
-         url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.ttf') format('truetype'),
-         url('open-sans/semibolditalic/OpenSans-SemiboldItalic-webfont.svg#open_sanssemibold_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-} */
 @font-face {
     font-family: 'Open Sans Regular';
     /* src: url('open-sans/regular/OpenSans-Regular-webfont.eot'); */
     src: 
         /* url('open-sans/regular/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-        url('open-sans/regular/OpenSans-Regular-webfont.woff2') format('woff2'), */
+        url('open-sans/regular/OpenSans-Regular-webfont.woff2') format('woff2'),
+        url('open-sans/regular/OpenSans-Regular-webfont.svg#open_sansregular') format('svg'), */
         url('open-sans/regular/OpenSans-Regular-webfont.woff') format('woff'),
         url('open-sans/regular/OpenSans-Regular-webfont.ttf') format('truetype');
-        /* url('open-sans/regular/OpenSans-Regular-webfont.svg#open_sansregular') format('svg'); */
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Open Sans Semibold';
+    font-family: 'Open Sans Light';
+    /* src: url('open-sans/light/OpenSans-Light-webfont.eot'); */
     src: 
-        /* url('open-sans/semibold/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'), */
-        /* url('open-sans/semibold/OpenSans-Semibold-webfont.woff2') format('woff2'), */
-        url('open-sans/semibold/OpenSans-Semibold-webfont.woff') format('woff'),
-        url('open-sans/semibold/OpenSans-Semibold-webfont.ttf') format('truetype');
-        /* url('open-sans/semibold/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg'); */
+        /* url('open-sans/light/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+        url('open-sans/light/OpenSans-Light-webfont.woff2') format('woff2'),
+        url('open-sans/light/OpenSans-Light-webfont.svg#open_sanslight') format('svg'), */
+        url('open-sans/light/OpenSans-Light-webfont.woff') format('woff'),
+        url('open-sans/light/OpenSans-Light-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
