--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: TBOOT
-Author: Aleapp
+Author: Alexis Boyda
 Author URI: https://aleapp.com
 Description: TBOOT Theme
 Version: 1.0.0
