--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: TBOOT
+Theme Name: WPSEED Theme
 Author: Alexis Boyda
 Author URI: https://aleapp.com
-Description: TBOOT Theme
+Description: WPSEED Theme Bootstrap
 Version: 1.0.0
 Text Domain: tboot
 */
